--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -361,30 +361,41 @@
                     sonar__section_isVertical = parseInt($('input[name="sonar__section_isVertical"]:checked').val()) === 1 ? true : false;
                     sonar__section_dLat_limit = parseFloat($('#sonar__section_dLat_limit').val()) || 0;
                     sonar__section_dLng_limit = parseFloat($('#sonar__section_dLng_limit').val()) || 0;
-                    $('div.sonar__section_radius').remove();
+                    $('div.sonar__section_area').remove();
                     sonar__map_points_draw();//clean red-rect radius                     
 
                     $('div.sonar__plane_point_dot').unbind('click').click(function () {
                         const lat = parseFloat($(this).attr('lat')) || 0;
                         const lng = parseFloat($(this).attr('lng')) || 0;
-                        sonar__section_pointsInRadius_draw(lat, lng); //точку, в окрестности которой будем искать                       
+                        sonar__section_pointsInArea_process(lat, lng); //точку, в окрестности которой будем искать                       
                     });
                 }
-                function sonar__section_pointsInRadius_draw(lat, lng) {
+                function sonar__section_area_draw(lat, lng) {
+                    if (lat < 1 || lng < 1) {
+                        return;
+                    }
+                    //draw red RECT +_ dlat dlong                      
+                    const h_px = parseInt((2 * sonar__section_dLat_limit) / sonar__pulse_size_offset_coef_lat);
+                    const w_px = parseInt((2 * sonar__section_dLng_limit) / sonar__pulse_size_offset_coef_lng);
+                    const top_px = parseInt((sonar__pulses_block_h_px / sonar__plane_compression_vertical) + sonar__getOffsetLat_px(lat) - 0.5 * h_px);
+                    const left_px = parseInt(sonar__getOffsetLng_px(lng) - 0.5 * w_px);
+                    let html = '<div class="sonar__section_area" style="left:' + left_px + 'px; top:' + top_px + 'px; width:' + w_px + 'px; height:1px; ">';
+                    html += '</div>';
+                    html += '<div class="sonar__section_area" style="left:' + left_px + 'px; top:' + parseInt(top_px + h_px) + 'px; width:' + w_px + 'px; height:1px; ">';
+                    html += '</div>';
+                    html += '<div class="sonar__section_area" style="left:' + left_px + 'px; top:' + top_px + 'px; width:1px; height:' + h_px + 'px; ">';
+                    html += '</div>';
+                    html += '<div class="sonar__section_area" style="left:' + parseInt(left_px + w_px) + 'px; top:' + top_px + 'px; width:' + w_px + 'px; height:1px; ">';
+                    html += '</div>';
+                    $('#sonar__plane_block').append(html);
+                }
+                function sonar__section_pointsInArea_process(lat, lng) {
                     if (lat < 1 || lng < 1) {
                         return;
                     }
 
-                    //draw red RECT +_ dlat dlong in 3D-points-block in selected lat-long
-                    const radius_h_px = (2 * sonar__section_dLat_limit) / sonar__pulse_size_offset_coef_lat;
-                    const radius_w_px = (2 * sonar__section_dLng_limit) / sonar__pulse_size_offset_coef_lng;
-                    const radius_top_px = parseInt(sonar__pulses_block_h_px / sonar__plane_compression_vertical + sonar__getOffsetLat_px(lat) - 0.5 * radius_h_px);
-                    const radius_left_px = sonar__getOffsetLng_px(lng) - 0.5 * radius_w_px;
-                    let html = '<div class="sonar__section_radius" style="left:' + radius_left_px + 'px; top:' + radius_top_px + 'px; width:' + radius_w_px + 'px; height:' + radius_h_px + 'px; ">';
-                    html += '</div>';
-                    $('#sonar__plane_block').append(html);
-
-                    sonar__map_section_radius(lat, lng);
+                    sonar__section_area_draw(lat, lng);
+                    sonar__map_section_area(lat, lng);
 
                     for (let index in sonar__section_pointsLatLng) {
                         const ll = index.split(/_/);
@@ -637,7 +648,7 @@
                     });
                     map__map.geoObjects.add(myCircle);
                 }
-                function sonar__map_section_radius(lat, lng) {
+                function sonar__map_section_area(lat, lng) {
                     if (!map__mapIsReady) {
                         return;
                     }
@@ -965,8 +976,8 @@
         overflow: hidden;     
         z-index: 99999;
     }
-    .sonar__section_radius{ 
-        border: 1px solid red;
+    .sonar__section_area{ 
+        background-color: red;
         position: absolute;    
         padding: 0;
         margin: 0; 
