--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -305,6 +305,7 @@
                 function sonar__point_selected_latlng() {
                     $('[sonar__point_selected_latlng][todo]').click(function () {
                         const el = $(this);
+                        el.removeAttr('todo');
                         $('#sonar__point_selected_latlng').html(el.attr('title'));
                     });
                 }
@@ -440,7 +441,7 @@
                         html += '<div class="sonar__section_pulse" title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm  lat=' + lat + ' lng=' + lng + '  R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; width:' + sonar__resolution_dot_px + 'px;  height: ' + sonar__resolution_dot_px + 'px; background-color:' + pulse_color + '; z-index:' + pulse.W + '; "></div>';
                     }
 
-                    html += '<div class="sonar__section_dotBottomDepth_line" sonar__point_selected_latlng title="' + (Math.round(data.depthM * 100) / 100) + 'm  lat=' + lat + ' lng=' + lng + ' " style="left:' + left_px + 'px; top:' + (6 + sonar__pulses_block_h_px) + 'px; background-color:' + depth_color + '; width:' + sonar__resolution_dot_px + 'px;  "></div>';
+                    html += '<div class="sonar__section_dotBottomDepth_line" sonar__point_selected_latlng todo title="' + (Math.round(data.depthM * 100) / 100) + 'm  lat=' + lat + ' lng=' + lng + ' " style="left:' + left_px + 'px; top:' + (6 + sonar__pulses_block_h_px) + 'px; background-color:' + depth_color + '; width:' + sonar__resolution_dot_px + 'px;  "></div>';
 
                     return html;
                 }
@@ -474,7 +475,7 @@
                     const top_px = sonar__getOffsetLat_px(lat);
 
 
-                    let html = '<div sonar__point_selected_latlng title="' + (Math.round((data.depthM) * 100) / 100) + 'm  lat=' + lat + ' lng=' + lng + ' " class="sonar__plane_point_pulses" style="left:' + left_px + 'px; top:' + top_px + 'px; width:' + sonar__resolution_dot_px + 'px; height: ' + Math.round(sonar__pulses_block_h_px / sonar__plane_compression_vertical) + 'px; ">'; //border-bottom: ' + sonar__resolution_dot_px + 'px solid ' + depth_color + ';
+                    let html = '<div sonar__point_selected_latlng todo title="' + (Math.round((data.depthM) * 100) / 100) + 'm  lat=' + lat + ' lng=' + lng + ' " class="sonar__plane_point_pulses" style="left:' + left_px + 'px; top:' + top_px + 'px; width:' + sonar__resolution_dot_px + 'px; height: ' + Math.round(sonar__pulses_block_h_px / sonar__plane_compression_vertical) + 'px; ">'; //border-bottom: ' + sonar__resolution_dot_px + 'px solid ' + depth_color + ';
                     for (const pulse of data.pulses) {
                         if (pulse.R <= (data.depth_mks + 150)) {
                             //fish over bottom                           
@@ -487,7 +488,7 @@
                     }
                     html += '</div>';
 
-                    html += '<div class="sonar__plane_point_dot" sonar__point_selected_latlng lat="' + lat + '" lng="' + lng + '" title="' + (Math.round(data.depthM * 100) / 100) + 'm lat=' + lat + ' lng=' + lng + ' " style="left:' + left_px + 'px; top:' + Math.round((sonar__pulses_block_h_px / sonar__plane_compression_vertical) + top_px) + 'px; background-color:' + depth_color + '; width:' + sonar__resolution_dot_px + 'px; height:' + sonar__resolution_dot_px + 'px; ">';
+                    html += '<div class="sonar__plane_point_dot" sonar__point_selected_latlng todo lat="' + lat + '" lng="' + lng + '" title="' + (Math.round(data.depthM * 100) / 100) + 'm lat=' + lat + ' lng=' + lng + ' " style="left:' + left_px + 'px; top:' + Math.round((sonar__pulses_block_h_px / sonar__plane_compression_vertical) + top_px) + 'px; background-color:' + depth_color + '; width:' + sonar__resolution_dot_px + 'px; height:' + sonar__resolution_dot_px + 'px; ">';
                     html += '</div>';
 
                     $('#sonar__plane_block').append(html);
@@ -862,13 +863,13 @@
                     sonar__mks2px_fullScale_dx = (sonar__mks2px_fullScale_multiplier_vertical * sonar__depth_max * sonar__mks2m) / sonar__pulses_block_h_px;
                 }
                 function sonar__getPulse_w_realBottom_mks_min(depth_mks) {
-                    if (depth_mks < 1500) {
-                        return 1200;
+                    if (depth_mks < 2000) {
+                        return 1100;
                     }
                     if (depth_mks < 3000) {
-                        return 1800;
+                        return 1200;
                     }
-                    return 1800;
+                    return 1200;
                 }
                 function sonar__pulses_hideWeak() {
                     const pulseW_mks = parseInt($('#sonar__range_pulse_w_min_show').val()) || 0;
