--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -140,7 +140,7 @@
                                 <div id="sonar__palette_depth_min_text" class="d-inline-block" style="width: 50px;"></div> 
                                 <div class="d-inline-block"><div id="sonar__palette_depth"></div></div> 
                                 <div id="sonar__palette_depth_max_text" class="d-inline-block"></div>
-                                <b>Point</b> <span id="sonar__point_selected_latlng" style="font-size: 12px;"></span>
+                                <b>Point</b> <span id="sonar__point_selected_latlng" style="font-size: 13px;"></span>
                             </div>
                             <div id="sonar__plane_block"></div>
                         </div>
@@ -435,7 +435,7 @@
                     const left_px = Math.round(sonar__section_isVertical ? sonar__getOffsetLat_px(lat) : sonar__getOffsetLng_px(lng));
                     let mt_px = Math.round(6 + sonar__mks2px_fullScale(data.depth_mks));
 
-                    let html = '<div class="sonar__section_dotBottomDepth" title="' + (Math.round(data.depthM * 100) / 100) + 'm  lat=' + lat + ' lng=' + lng + ' " style="left:' + left_px + 'px; top:' + mt_px + 'px; background-color:' + depth_color + '; width:' + sonar__resolution_dot_px + 'px; height: ' + sonar__resolution_dot_px + 'px; "></div>';
+                    let html = '<div class="sonar__section_dotBottomDepth" title="' + (Math.round(data.depthM * 100) / 100) + 'm ' + lat + ' ' + lng + ' " style="left:' + left_px + 'px; top:' + mt_px + 'px; background-color:' + depth_color + '; width:' + sonar__resolution_dot_px + 'px; height: ' + sonar__resolution_dot_px + 'px; "></div>';
                     for (const pulse of data.pulses) {
                         if (pulse.R <= (data.depth_mks + 150)) {
                             mt_px = sonar__mks2px_fullScale(pulse.R); //fish over bottom                           
@@ -443,10 +443,10 @@
                             mt_px = sonar__mks2px_fullScale((pulse.R / sonar__pulse_underBottom_compression_vertical) + data.depth_mks); //under bottom  уплотняем картинку в Х раз 
                         }
                         const pulse_color = sonar__getColor_power_mks(pulse.W);
-                        html += '<div class="sonar__section_pulse" title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm  lat=' + lat + ' lng=' + lng + '  R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; width:' + sonar__resolution_dot_px + 'px;  height: ' + sonar__resolution_dot_px + 'px; background-color:' + pulse_color + '; z-index:' + pulse.W + '; "></div>';
+                        html += '<div class="sonar__section_pulse" title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm ' + lat + ' ' + lng + '  R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; width:' + sonar__resolution_dot_px + 'px;  height: ' + sonar__resolution_dot_px + 'px; background-color:' + pulse_color + '; z-index:' + pulse.W + '; "></div>';
                     }
 
-                    html += '<div class="sonar__section_dotBottomDepth_line" sonar__point_selected_latlng todo title="' + (Math.round(data.depthM * 100) / 100) + 'm  lat=' + lat + ' lng=' + lng + ' " style="left:' + left_px + 'px; top:' + (6 + sonar__pulses_block_h_px) + 'px; background-color:' + depth_color + '; width:' + sonar__resolution_dot_px + 'px;  "></div>';
+                    html += '<div class="sonar__section_dotBottomDepth_line" sonar__point_selected_latlng todo title="' + (Math.round(data.depthM * 100) / 100) + 'm ' + lat + ' ' + lng + ' " style="left:' + left_px + 'px; top:' + (6 + sonar__pulses_block_h_px) + 'px; background-color:' + depth_color + '; width:' + sonar__resolution_dot_px + 'px;  "></div>';
 
                     return html;
                 }
@@ -480,7 +480,7 @@
                     const top_px = sonar__getOffsetLat_px(lat);
 
 
-                    let html = '<div sonar__point_selected_latlng todo title="' + (Math.round((data.depthM) * 100) / 100) + 'm  lat=' + lat + ' lng=' + lng + ' " class="sonar__plane_point_pulses" style="left:' + left_px + 'px; top:' + top_px + 'px; width:' + sonar__resolution_dot_px + 'px; height: ' + Math.round(sonar__pulses_block_h_px / sonar__plane_compression_vertical) + 'px; ">'; //border-bottom: ' + sonar__resolution_dot_px + 'px solid ' + depth_color + ';
+                    let html = '<div title="' + (Math.round((data.depthM) * 100) / 100) + 'm ' + lat + ' ' + lng + ' " class="sonar__plane_point_pulses" style="left:' + left_px + 'px; top:' + top_px + 'px; width:' + sonar__resolution_dot_px + 'px; height: ' + Math.round(sonar__pulses_block_h_px / sonar__plane_compression_vertical) + 'px; ">'; //border-bottom: ' + sonar__resolution_dot_px + 'px solid ' + depth_color + ';
                     for (const pulse of data.pulses) {
                         if (pulse.R <= (data.depth_mks + 150)) {
                             //fish over bottom                           
@@ -489,11 +489,11 @@
                         }
                         const pulse_color = sonar__getColor_power_mks(pulse.W); //fish over bottom                         
                         const mt_px = Math.round(sonar__mks2px_fullScale(pulse.R) / sonar__plane_compression_vertical);
-                        html += '<div class="sonar__plane_point_pulse" title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm  lat=' + lat + ' lng=' + lng + '  R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="top:' + mt_px + 'px; width:' + (sonar__resolution_dot_px - 2) + 'px; background-color:' + pulse_color + '; "></div>';
+                        html += '<div class="sonar__plane_point_pulse" title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm ' + lat + ' ' + lng + '  R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="top:' + mt_px + 'px; width:' + (sonar__resolution_dot_px - 2) + 'px; background-color:' + pulse_color + '; "></div>';
                     }
                     html += '</div>';
 
-                    html += '<div class="sonar__plane_point_dot" sonar__point_selected_latlng todo lat="' + lat + '" lng="' + lng + '" title="' + (Math.round(data.depthM * 100) / 100) + 'm lat=' + lat + ' lng=' + lng + ' " style="left:' + left_px + 'px; top:' + Math.round((sonar__pulses_block_h_px / sonar__plane_compression_vertical) + top_px) + 'px; background-color:' + depth_color + '; width:' + sonar__resolution_dot_px + 'px; height:' + sonar__resolution_dot_px + 'px; ">';
+                    html += '<div class="sonar__plane_point_dot" sonar__point_selected_latlng todo lat="' + lat + '" lng="' + lng + '" title="' + (Math.round(data.depthM * 100) / 100) + 'm ' + lat + ' ' + lng + ' " style="left:' + left_px + 'px; top:' + Math.round((sonar__pulses_block_h_px / sonar__plane_compression_vertical) + top_px) + 'px; background-color:' + depth_color + '; width:' + sonar__resolution_dot_px + 'px; height:' + sonar__resolution_dot_px + 'px; ">';
                     html += '</div>';
 
                     $('#sonar__plane_block').append(html);
@@ -865,7 +865,7 @@
 
                     $('#bathymetry__points_count').html(sonar__dataItemsCount + ' points');
                     $('#sonar__palette_depth_min_text').html(Math.round(sonar__depth_min_m * 100) / 100 + 'm');
-                    $('#sonar__palette_depth_max_text').html(Math.round(sonar__depth_max_m * 100) / 100 + 'm ' + '<span style="font-size:12px;">' + sonar__depth_max_latlng[0] + ' ' + sonar__depth_max_latlng[1] + '</span>');
+                    $('#sonar__palette_depth_max_text').html(Math.round(sonar__depth_max_m * 100) / 100 + 'm ' + '<div class="d-inline-block" style=font-size:6px;>' + sonar__depth_max_latlng[0] + '<br>' + sonar__depth_max_latlng[1] + '</div>');
 
                     sonar__getColor_depth_m_dx = (sonar__depth_max_m - sonar__depth_min_m) / sonar__colors_depth.length;
                     sonar__mks2px_fullScale_dx = (sonar__mks2px_fullScale_multiplier_vertical * sonar__depth_max_m * sonar__mks2m) / sonar__pulses_block_h_px;
@@ -916,7 +916,7 @@
                     sonar__resolution_dLat = parseFloat($('#sonar__resolution_dLat').val()) || 0;
                     sonar__resolution_dLng = parseFloat($('#sonar__resolution_dLng').val()) || 0;
                     sonar__pulse_size_offset_coef_lat = sonar__resolution_dLat / sonar__resolution_dot_px;
-                    sonar__pulse_size_offset_coef_lng = sonar__resolution_dLng / sonar__resolution_dot_px;                    
+                    sonar__pulse_size_offset_coef_lng = sonar__resolution_dLng / sonar__resolution_dot_px;
                 }
                 function sonar__distanceTwoPoints_m(lat1, lng1, lat2, lng2) {
                     lat1 = lat1 * 0.01745329251994329576923690768489; //to rad PI/180
